# spekitest

./: .gitignore  Cargo.toml  path
src/: cache.rs  card.rs  categories.rs  cli.rs  common.rs  config.rs  folders.rs  frontend.rs  git.rs  main.rs  media.rs
src/frontend/: add_cards.rs
src/snapshots/: spekinew__card__tests__card_roundtrip.snap  spekinew__card__tests__card_roundtrip.snap.new  spekinew__card__tests__load_cards_from_folder.snap  spekinew__categories__tests__joined.snap.new  spekinew__categories__tests__load_all.snap.new  spekinew__common__tests__as_path.snap  spekinew__common__tests__as_path.snap.new  spekinew__common__tests__as_path_with_id.snap  spekinew__common__tests__as_path_with_id.snap.new  spekinew__common__tests__from_card_path.snap  spekinew__common__tests__joined.snap  spekinew__common__tests__load_all.snap
test_dir/: cards.toml
test_dir/cards/: finished.toml  guten tag.toml  root.toml  unfinished.toml
test_dir/media/: README.md
testing/history/: fecee832-e379-47a7-9208-e0a5fdf44464
testing/maths/: 8bc35fe2-f02b-4633-8f1b-306eb4e09cd2.toml
testing/maths/calculus/: 491f8b92-c943-4c4b-b7bf-f7d483208eb0.toml  af618145-3da6-48f9-b45c-8d775fc8c7ee.toml
