[package]
name = "spekinew"
version = "0.1.5"
edition = "2021"
description = "new version of speki, more git-oriented"
license = "GPL-2.0-only"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
#toml = { version = "0.7.3", features = ["parse"] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.3.2", features = ["v4", "serde"] }
dirs = "5.0.1"
crossterm = "0.26.1"
#rand = { version = "0.8.4", default-features = false, features = ["std_rng", "seq"] }
ureq = { version = "2.6.2", default-features = false, features = ["tls"] }
rodio = "0.16.0"
csv = "1.2.2"
rasciigraph = "0.2.0"
#rusqlite = "0.24.0"


[dependencies.toml]
version = "0.7.3"
default-features = false
features = ["parse", "display"]



[dev-dependencies]
insta = "1.29.0"




